feat: passed s01e01, Array

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Rs School Basics</h1>
+    <div class="container">
+        <div class="blue_card">
+            <h1>Rs School Basics</h1>
+        </div>
+        <div class="yellow_card"></div>
+    </div>
 <script src="js/script.js"></script>
 </body>
 </html>
