--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
         <div class="yellow_card"></div>
     </div>
-<script src="js/script.js"></script>
+<script src="js/numbers.js"></script>
+<!-- <script src="js/array.js"></script> -->
 </body>
 </html>
